tests/compile-fail/repr_wrong_group.stderr
error: Repr is malformed, expecting repr(TYPE)
 --> $DIR/repr_wrong_group.rs:4:7
  |
4 | #[repr[i8]]
  |       ^^^^

error: wrong meta list delimiters
 --> $DIR/repr_wrong_group.rs:4:7
  |
4 | #[repr[i8]]
  |       ^^^^
  |
help: the delimiters should be `(` and `)`
  |
4 | #[repr(i8)]
  |       ^  ^
